--- a/wwwroot/view/Catologo/index.css
+++ b/wwwroot/view/Catologo/index.css
@@ -6,3 +6,26 @@
 .foto_layout {
     max-height: 220px;
 }
+
+.carrosel_item {
+    background-color: rgb(223, 223, 223);
+    max-width: 400px;
+    max-height: 680px;
+}
+
+.carrosel_img {
+    text-align: center;
+
+    min-width: 220px;
+    min-height: 320px;
+    max-width: 220px;
+    max-height: 320px;
+}
+
+.carousel-control-next-icon:after {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-prev-icon:after {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
