--- a/Views/CadastrarUsuario/IndexObterPerfil.cshtml
+++ b/Views/CadastrarUsuario/IndexObterPerfil.cshtml
@@ -17,7 +17,7 @@
 
 
 
-<div class="card card-primary">
+<div class="card card-default">
     <div class="card-header">
         <h3 class="card-title">Perfil do usuário</h3>
     </div>
@@ -51,24 +51,19 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="form-group">
-
                 <div class="col-7 d-flex justify-content-start align-content-start flex-wrap">
                     <label for="perfil_rua">Rua</label>
                     <input type="text" class="form-control" id="perfil_rua" value="" disabled>
                 </div>
-                <div class="col-12 d-flex justify-content-start align-content-start flex-wrap">
 
-                    <div class="col-4 d-flex justify-content-start align-content-start flex-wrap">
-                        <label for="perfil_numero">Número</label>
-                        <input type="text" class="form-control" id="perfil_numero" value="" disabled>
-                    </div>
+                <div class="col-2 d-flex justify-content-start align-content-start flex-wrap">
+                    <label for="perfil_numero">Número</label>
+                    <input type="text" class="form-control" id="perfil_numero" value="" disabled>
+                </div>
 
-                    <div class="col-4 d-flex justify-content-start align-content-start flex-wrap">
-                        <label for="perfil_cep">CEP</label>
-                        <input type="text" class="form-control" id="perfil_cep" value="" disabled>
-                    </div>
+                <div class="col-4 d-flex justify-content-start align-content-start flex-wrap mt-3">
+                    <label for="perfil_cep">CEP</label>
+                    <input type="text" class="form-control" id="perfil_cep" value="" disabled>
                 </div>
             </div>
         </div>
