--- a/Views/Logar/Index.cshtml
+++ b/Views/Logar/Index.cshtml
@@ -21,7 +21,7 @@
         </div>
         <!-- /.box-header -->
         <!-- form start -->
-        <div class="box-body">
+        <div class="box-body  d-flex justify-content-center align-items-center flex-column">
             <form class="form-horizontal">
                 <div class="form-group col-12">
                     <label for="email" class="col-sm-6 control-label">Email</label>
@@ -38,24 +38,16 @@
                         <input type="password" class="form-control" name="password" id="password" placeholder="Senha">
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-7">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Lembrar-me
-                            </label>
-                        </div>
-                    </div>
-                </div>
+                
             </form>
-        </div>
-        <!-- /.box-body -->
-        <div class="box-footer">
             <button type="button"
                     class="btn btn-info pull-right"
                     onclick="index.btnLogar()">
                 Logar
             </button>
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
         </div>
         <!-- /.box-footer -->
     </div>
