--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -167,22 +167,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
-                        <li class="nav-item">
-                            <a href="/cadastrarusuario" class="nav-link">
-                                <i class="nav-icon fa fa-users"></i>
-                                <p>
-                                    Cadastrar Usuário
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="/logar" class="nav-link">
-                                <i class="nav-icon far fa-user"></i>
-                                <p>
-                                    Login
-                                </p>
-                            </a>
-                        </li>
+
 
                         @{
 
@@ -222,39 +207,58 @@
                                     </a>
                                 </li>
                             }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a href="/cadastrarusuario" class="nav-link">
+                                        <i class="nav-icon fa fa-users"></i>
+                                        <p>
+                                            Cadastrar Usuário
+                                        </p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/logar" class="nav-link">
+                                        <i class="nav-icon far fa-user"></i>
+                                        <p>
+                                            Login
+                                        </p>
+                                    </a>
+                                </li>
+                            }
                         }
 
 
 
                         @*<li class="nav-item has-treeview">
-                                <a href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
-                                    <p>
-                                        Gerenciamento básico
-                                        <i class="right fas fa-angle-left"></i>
-                                    </p>
-                                </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Usuário</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="./index2.html" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Produto</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="./index3.html" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Fornecedores</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>*@
+            <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-tachometer-alt"></i>
+                <p>
+                    Gerenciamento básico
+                    <i class="right fas fa-angle-left"></i>
+                </p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Usuário</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="./index2.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Produto</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="./index3.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Fornecedores</p>
+                    </a>
+                </li>
+            </ul>
+        </li>*@
 
 
                     </ul>
