arrumar setas do modal

--- a/Views/CadastrarProduto/IndexListar.cshtml
+++ b/Views/CadastrarProduto/IndexListar.cshtml
@@ -23,16 +23,16 @@
 
         <div class="box-body col-sm-10 d-flex justify-content-center align-items-center flex-wrap">
             <div class="col-sm-12 d-flex d-flex justify-content-start align-items-center flex-wrap">
-                <div class="form-group col-sm-12 d-flex justify-content-start align-items-center flex-wrap">
-                    <div class="col-sm-4 d-flex justify-content-start align-items-center">
+                <div class="form-group col-sm-12 d-flex justify-content-center align-items-center flex-wrap">
+                    <div class="col-sm-3 d-flex justify-content-start align-items-center">
                         <label for="txtBuscarProdNome">Nome do produto</label> <br />
 
                     </div>
-                    <div class="col-sm-6 d-flex justify-content-start align-items-center">
+                    <div class="col-sm-7 d-flex justify-content-start align-items-center">
                         <input type="text" id="txtBuscarProdNome" />
 
                     </div>
-                    <div class="col-sm-2 d-flex justify-content-start align-items-center">
+                    <div class="col-sm-2 pl-2 d-flex justify-content-start align-items-center">
                         <input type="button"
                                onclick="indexListar.btnPesquisar()"
                                value="Pesquisar"
