--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -18,7 +18,9 @@
         <div class="col-10 d-flex justify-content-center align-content-center"
              style="background-color: rgb(223, 223, 223);">
             <div class="row" id="divMsgs">
-                <h1>Boas compras!!</h1>
+                <strong>
+                    <h1>Catálogo de produtos.</h1>
+                </strong>
             </div>
         </div>
     </div>
