--- a/Views/Logar/Index.cshtml
+++ b/Views/Logar/Index.cshtml
@@ -15,7 +15,7 @@
 <div class="col-sm-12 d-flex justify-content-center align-items-center flex-wrap">
 
     <div class="box box-info">
-        <div class="box-header with-border">
+        <div class="box-header with-border  d-flex justify-content-center align-items-center flex-column">
             <h3 class="box-title">Faça o login!</h3>
             <h4 id="divMsg"></h4>
         </div>
