mudar título da página de catálogo.

--- a/Views/Catalogo/Index.cshtml
+++ b/Views/Catalogo/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Catálogo de produtos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
